--- a/pet-hospital/package.json
+++ b/pet-hospital/package.json
@@ -21,6 +21,7 @@
     "md5": "^2.3.0",
     "pinia": "^2.1.7",
     "sass": "^1.71.1",
+    "three": "^0.163.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -44,7 +45,7 @@
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.0.11",
+    "vite": "^5.2.7",
     "vitest": "^1.2.2",
     "vue-tsc": "^1.8.27"
   }
