--- a/pet-hospital/package.json
+++ b/pet-hospital/package.json
@@ -21,6 +21,7 @@
     "md5": "^2.3.0",
     "pinia": "^2.1.7",
     "sass": "^1.71.1",
+    "three": "^0.148.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
